# umanager

./: README.md  UI_DEVELOPMENT_INSTRUCTION.md  UI_MAINAREA.md  UI_STRUCTURE.md  pyproject.toml
.github/workflows/: check.yml
src/umanager/: app.py
src/umanager/backend/device/: __init__.py  base_service.py  protocol.py  registry.py  storage_service.py
src/umanager/backend/filesystem/: __init__.py  protocol.py  service.py
src/umanager/ui/dialogs/: __init__.py  create_file_dialog.py  device_detail_dialog.py
src/umanager/ui/states/: __init__.py  file_manager_state.py  main_area_state.py  mainarea_state.py  overview_state.py
src/umanager/ui/views/: __init__.py  file_manager_page.py  main_area.py  mainarea_view.py  overview_page.py  root_window.py
src/umanager/ui/widgets/: __init__.py  basic_info_bar.py  device_info_list.py  file_manager_button_bar.py  file_manager_list.py  file_manager_list_widget.py  overview_button_bar.py  (+3 more)
src/umanager/util/: __init__.py  device_change_watcher.py
tests/integration/: test_device_info_list_widget.py  test_file_manager_button_bar.py  test_file_manager_page.py  test_file_manager_path_bar.py  test_main_area_view.py  test_mainarea_view.py  test_overview_button_bar.py  test_overview_page.py  test_overview_title_bar.py  test_overview_with_basic_info_bar.py  test_root_window.py  test_sidebar.py
tests/integration/umanager/: test_file_manager_button_bar.py  test_file_manager_list.py  test_overview_button_bar.py  test_overview_page.py  test_overview_title_bar.py  test_overview_with_basic_info_bar.py
tests/unit/umanager/: test_app.py
(+1 files in other folders)
