[project]
name = "umanager"
version = "0.1.0"
description = "USB device manager for Windows"
readme = "README.md"
authors = [
    { name = "Justin Chen", email = "starryreverie@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.14",
    "psutil>=7.1.3",
    "pyside6>=6.10.1",
    "pywin32>=311",
    "wmi>=1.5.1",
]

[project.scripts]
umanager = "umanager:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
